fix overflow

--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -12,6 +12,7 @@ body
   width: 100vw
   justify-content: center
   align-items: center
+  overflow: auto
 
 .modal
   box-sizing: border-box
